2003-10-19  Kjartan Maraas  <kmaraas@gnome.org>

	* gsearchtool-support.c: (get_readable_date): Move
	the comment down one line to fix bug #120434 for
	good.

2003-10-15  Dennis Cranston <dennis_cranston at yahoo com>
	
	* gsearchtool.c, gsearchtool-callbacks.c, and 
	  gsearchtool-support.c:  Various memory leak fixes
	  for bug report #124656. Patch provided by Kjartan 
	  Maraas <kmarass at gnome org>.
	  
2003-10-10  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool-callbacks.c: Ditto.
	
2003-10-10  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.c:  Support drag and drop with BUTTON2.

2003-09-29  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.c:  Fix for a portability issue detected on 
	AIX. See bug report 123191, "G_IO_HUP is not enough to
	detect broken pipe".
	(http://bugzilla.gnome.org/show_bug.cgi?id=123191)
	
2003-09-22  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool-support.c:  Add a comment for translators.
	(http://bugzilla.gnome.org/show_bug.cgi?id=120434)
	
2003-09-22  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.[ch]:  Fix for bug report 122704.
	(http://bugzilla.gnome.org/show_bug.cgi?id=122704)
	
2003-09-21  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-search-tool-animation.png:  Small touch up.

2003-09-18  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.c:  Fix for bug report 122419.
	(http://bugzilla.gnome.org/show_bug.cgi?id=122419)
	
	* gsearchtool-callbacks.[ch]:  Rename the callback function 
	constraint_menu_toggled_cb to constraint_menu_item_activate_cb.

2003-09-18  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool-callbacks.c:  Apply fix based on patch from
	Hidetoshi Tajima (hidetoshi.tajima@sun.com) for bug report
	122402. (http://bugzilla.gnome.org/show_bug.cgi?id=122402)

2003-08-23  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-search-tool.schemas, gsearchtool.c:  Clean up gconf
	key paths.
