@@ -1,3 +1,7 @@
+2003-10-19  Bastien Nocera  <hadess@hadess.net>
+
+	* Makefile.am: pass make distcheck
+
 2003-09-02  Glynn Foster  <glynn.foster@sun.com>
 
 	* Makefile.am, calendar.c, info.c, logview.c: Remove some ifdef'd
