@@ -1,3 +1,7 @@
+2003-10-19  Bastien Nocera  <hadess@hadess.net>
+
+	* Makefile.am: pass make distcheck
+
 2003-10-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gsearchtool-support.c: (get_readable_date): Move
